# SummerAsr

./: CMakeLists.txt  README.md
include/: am.h  asr.h  ctc_beam_search_decoder.h  extract_feat.h  nn.h  scorer.h  vad.h
include/include.err/: am.h  asr.h  extract_feat.h  nn.h
model/: model.txt
src/am/: am.cpp
src/asr/: asr.cpp
src/decoder/: ctc_beam_search_decoder.cpp  scorer.cpp
src/feat/: extract_feat.cpp  hanning.cpp
src/librnnoise/: ._rnn_data.c  Makefile  denoise.c
src/lm/: CMakeLists.txt_  model.hh
src/nn/: nn.cpp
src/util/: CMakeLists.txt
src/vad/: vad.cpp  vad_internal_api.c  vad_internal_api.h
test/: main.cpp  main.cpp.bak  main.cpp.mic
